--- a/src/components/MainButton/mainButton.module.css
+++ b/src/components/MainButton/mainButton.module.css
@@ -3,10 +3,23 @@
   z-index: "2";
 }
 
-.buttonsContainer {
+.hardCodedButtonsContainer {
   display: inline-block;
   cursor: "pointer";
   /*float: right;*/
+}
+
+.defaultIconButton{
+  color: white;
+  font-weight: bold;
+  background-color: #673ab7;
+  display: inline-block;
+  margin: 5px;
+  padding: 20px;
+  height: 50px;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 .defaultButtons {
@@ -44,6 +57,10 @@
 }
 
 .defaultButtons:hover {
+  opacity: 0.7;
+}
+
+.defaultIconButton:hover {
   opacity: 0.7;
 }
 /*
